--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,3 +53,7 @@ dependencies {
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_viewmodel_version"
     kapt "androidx.hilt:hilt-compiler:$hilt_viewmodel_version"
 }
+
+kapt {
+    correctErrorTypes true
+}
